Code clean up and comment update.
Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>